updated game logic with modular approach and basic UI-UX

--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>TicTacToe</title>
- <link rel="stylesheet" href="./styles.css">
-</head>
-<body>
- <script src="./script.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TicTacToe</title>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="scoreContainer">
+        <h2>Game Score</h2>
+        <div class="pScoresContainer">
+          <p class="playerScore"><span id="p1Score"> </span></p>
+          <p class="playerScore"><span id="p2Score"> </span></p>
+        </div>
+      </div>
+      <div class="gameBoard">
+        <div class="cell" id="1"></div>
+        <div class="cell" id="2"></div>
+        <div class="cell" id="3"></div>
+        <div class="cell" id="4"></div>
+        <div class="cell" id="5"></div>
+        <div class="cell" id="6"></div>
+        <div class="cell" id="7"></div>
+        <div class="cell" id="8"></div>
+        <div class="cell" id="9"></div>
+      </div>
+    </div>
+    <!-- <script defer src="./script.js"></script> -->
+    <script defer src="./script2.js"></script>
+  </body>
 </html>
