removed duplicated code from js and called the corrected file for the script

--- a/index.html
+++ b/index.html
@@ -8,13 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="scoreContainer">
-        <h2>Game Score</h2>
-        <div class="pScoresContainer">
-          <p class="playerScore"><span id="p1Score"> </span></p>
-          <p class="playerScore"><span id="p2Score"> </span></p>
-        </div>
-      </div>
+      <div class="scoreContainer"></div>
       <div class="gameBoard">
         <div class="cell" id="1"></div>
         <div class="cell" id="2"></div>
@@ -27,7 +21,6 @@
         <div class="cell" id="9"></div>
       </div>
     </div>
-    <!-- <script defer src="./script.js"></script> -->
-    <script defer src="./script2.js"></script>
+    <script defer src="./script.js"></script>
   </body>
 </html>
