Added the play buttons and updating the UI when we have a winner

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <body>
     <div class="container">
       <div class="scoreContainer"></div>
+      <div class="uiControls">
+        <button id="playBtn" class="gameBtn">Play</button>
+        <button id="restartBtn" class="gameBtn">Restart</button>
+      </div>
       <div class="gameBoard">
         <div class="cell" id="1"></div>
         <div class="cell" id="2"></div>
